# catalogs

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  pyproject.toml
builds/: README.md
crossmatches/: README.md
docs/: audit.md  build-records.md  configuration.md  crossmatches.md  first-publications.md  layout.md  naming.md  overrides.md  release-process.md
evidence/: README.md
overrides/: README.md
publications/: README.md
publications/20260515.1/: LICENSE.txt  NOTICE.md  PAPER.md  README.md  REFERENCES.md  checksums.sha256  manifest.toml  run_log.md
publications/20260515.1/catalog/: fis_gaia_hip_supplemental_display_map.parquet
publications/20260515.1/evidence/: gaia_g15_parallax_conversion_summary.json  gaia_g15_parallax_download.adql  gaia_g15_parallax_download_state.json  gaia_hip_display_match_report.json  hip_gaia_magnitude_outliers.csv  hip_gaia_magnitude_summary.json  hip_healpix_cone_footprint_summary.csv  hip_healpix_footprint_summary.json  hip_healpix_neighbor_footprint_summary.csv
publications/20260517.1/: LICENSE.txt  NOTICE.md  README.md  REFERENCES.md  checksums.sha256  manifest.toml  run_log.md
publications/20260517.1/evidence/: fetch_review_candidate_cohorts.py  fis_20260515_1_review_supplemental_lookup.csv  fis_20260515_1_review_supplemental_lookup.parquet  gaia_hip_review_best_neighbour_lookup.csv  (+26 more)
schemas/: README.md
templates/: README.md  artifacts.json  build.lock.toml  catalog-manifest.toml  counts.json
templates/publication/: README.md  manifest.toml
tests/audit/: test_pipeline.py  test_raw_match.py
(+24 files in other folders)
